--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -27,7 +27,7 @@
     "live",
     "master"
   ],
-  "git_repository_url_open_to_public_contributors": "https://github.com/aspnet/AspNetDocs.fr-fr",
+  "git_repository_url_open_to_public_contributors": "https://github.com/aspnet/AspNetCore.Docs.fr-fr",
   "git_repository_branch_open_to_public_contributors": "live",
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
