--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -70,6 +70,9 @@
               uid: tutorials/first-mvc-app/validation
             - name: Examiner les méthodes Details et Delete
               uid: tutorials/first-mvc-app/details
+        - name: Blazor
+          displayName: tutorial
+          uid: tutorials/first-blazor-app
     - name: Applications API Web
       items:
         - name: Créer une API web
