--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -81,6 +81,9 @@
         - name: API Web avec MongoDB
           displayName: tutorial
           uid: tutorials/first-mongo-app
+        - name: API Web avec jQuery
+          displayName: tutorial
+          uid: tutorials/web-api-jquery
         - name: Back-end pour mobile
           displayName: tutorial
           uid: mobile/native-mobile-backend
