--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -1009,6 +1009,8 @@
       uid: fundamentals/localization
     - name: Localisation d’objet portable
       uid: fundamentals/portable-object-localization
+    - name: Extensibilité
+      uid: fundamentals/localization-extensibility
     - name: Résoudre les problèmes
       uid: fundamentals/troubleshoot-aspnet-core-localization
 - name: Avancé
